--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,11 @@ dependencies {
 	implementation 'org.modelmapper:modelmapper:2.3.8'
 
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.6.4'
+
+	testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'
+	testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
-}
+//tasks.named('test') {
+//	useJUnitPlatform()
+//}
